test_programs/compile_failure/noirc_frontend_tests_resolve_basic_closure/src/main.nr

        fn main(x : Field) -> pub Field {
            let closure = |y| y + x;
            closure(x)
        }
    